# linux-dev-2020

./: hello.c
03_TerminalProject/: Makefile  Readme.md  show.c
04_Multifile/: Makefile  prog-a  prog-b
05_Environmental/: CMakeLists.txt  Readme.md  config.h.in  main.c
06_Debugging/: 2free.c
07_DebuggingTracing/: Makefile  unlinkat.c
08_TestingCoverage/: CMakeLists.txt  Makefile  README.md
08_TestingCoverage/inc/: buf.h
08_TestingCoverage/src/: buf.c
08_TestingCoverage/test/: CMakeLists.txt  core_tests.c  core_tests.ts  grow_over_err.c  init_over_err.c  mem_out_err.c
09_I18nL10n/: CMakeLists.txt  Readme.md  guess.c  guess.pot  ru.po
10_Documenting/: CMakeLists.txt  Doxyfile.in  Readme.md  guess.c  guess.pot  mainpage.md.in  roman.h  ru.po
11_Toolkits/: Makefile  hist.c
12_ScriptingText/: COPYING  Doxyfile.in  Makefile.am  configure.ac  script.sh.in
12_ScriptingText/src/: Makefile.am  Makefile.in  libnamegen.c  libnamegen.md.in  namegen.1  namegen.c  namegen.h  namegen.md.in
12_ScriptingText/tests/: Makefile.am  Makefile.in  dummy.c  errors.ts  fixed.ts
13_PatchInstall/: CMakeLists.txt  Readme.md  config.h.in  guess.c  guess.po  guess.pot
